paleta de colores y tipografia

--- a/index-restaurant.html
+++ b/index-restaurant.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="style.min.css">
 </head>
 
-<body class="template-color-24 template-font-7 CerebriSans-font">
+<body class="template-color-24 template-font-7 Encode Sans Expanded-font">
     <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
