Cambios finales pre enviada a cliente

--- a/index-expert.html
+++ b/index-expert.html
@@ -1701,7 +1701,7 @@
                         data-responsive_offset="off" data-responsive="off" data-startslide="0" data-endslide="2"
                         data-frames='[{"delay":0,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                         data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
-                        data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 46; min-width: 37px; max-width: 37px; white-space: normal; font-size: 36px; line-height: 51px; font-weight: 700; color: #ffffff;font-family:Poppins;">01
+                        data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 46; min-width: 37px; max-width: 37px; white-space: normal; font-size: 36px; line-height: 51px; font-weight: 700; color: #ffffff;font-family:Encode Sans Expanded;">01
                     </div>
 
                     <!-- LAYER NR. 43 -->
@@ -1723,7 +1723,7 @@
                         data-responsive_offset="off" data-responsive="off" data-startslide="0" data-endslide="2"
                         data-frames='[{"delay":0,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                         data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
-                        data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 48; white-space: nowrap; font-size: 20px; line-height: 28px; font-weight: 700; color: #ffffff;font-family:Poppins;">03
+                        data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 48; white-space: nowrap; font-size: 20px; line-height: 28px; font-weight: 700; color: #ffffff;font-family:Encode Sans Expanded;">03
                     </div>
                 </div>
                 <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
