--- a/index-vertical-slider-portfolio.html
+++ b/index-vertical-slider-portfolio.html
@@ -1251,7 +1251,7 @@
                                             data-margintop="[0,0,0,0]" data-marginright="[0,0,0,0]" data-marginbottom="[0,0,0,0]"
                                             data-marginleft="[0,0,0,0]" data-textAlign="['inherit','inherit','inherit','inherit']"
                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: nowrap; font-size: 18px; line-height: 20px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-decoration: none;">Scroll
+                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: nowrap; font-size: 18px; line-height: 20px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;text-decoration: none;">Scroll
                                             for more </a>
 
                                         <!-- LAYER NR. 3 -->
@@ -1303,7 +1303,7 @@
                                             data-margintop="[0,0,0,0]" data-marginright="[0,0,0,0]" data-marginbottom="[0,0,0,0]"
                                             data-marginleft="[0,0,0,0]" data-textAlign="['inherit','inherit','inherit','inherit']"
                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 15; white-space: nowrap; font-size: 18px; line-height: 20px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">Watch
+                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 15; white-space: nowrap; font-size: 18px; line-height: 20px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;">Watch
                                             video </div>
 
                                         <!-- LAYER NR. 10 -->
@@ -1348,7 +1348,7 @@
                                         data-responsive="off" data-frames='[{"delay":10,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(251,96,49);bg:rgb(255,255,255);"}]'
                                         data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]"
                                         data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]"
-                                        data-paddingleft="[20,20,20,20]" style="z-index: 6; min-width: 160px; max-width: 160px; max-width: 55px; max-width: 55px; white-space: normal; font-size: 14px; line-height: 55px; font-weight: 600; color: rgba(255,255,255,1); font-family:Poppins;background-color:rgb(251,96,49);border-radius:6px 6px 6px 6px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">Check
+                                        data-paddingleft="[20,20,20,20]" style="z-index: 6; min-width: 160px; max-width: 160px; max-width: 55px; max-width: 55px; white-space: normal; font-size: 14px; line-height: 55px; font-weight: 600; color: rgba(255,255,255,1); font-family:Encode Sans Expanded;background-color:rgb(251,96,49);border-radius:6px 6px 6px 6px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">Check
                                         Portfolio </div>
                                 </li>
                             </ul>
