--- a/index-astronomy.html
+++ b/index-astronomy.html
@@ -1135,7 +1135,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":2870,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Poppins;text-transform:uppercase;">Horsehead
+                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Encode Sans Expanded;text-transform:uppercase;">Horsehead
                                 </div>
 
                                 <!-- LAYER NR. 3 -->
@@ -1146,7 +1146,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":3500,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power2.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">
+                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;">
                                     Best assistant in astronomical presentations with spectacular effects and display.
                                 </div>
                             </li>
@@ -1185,7 +1185,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":2870,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Poppins;text-transform:uppercase;">meteor
+                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Encode Sans Expanded;text-transform:uppercase;">meteor
                                 </div>
 
                                 <!-- LAYER NR. 6 -->
@@ -1196,7 +1196,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":3500,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power2.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">Create
+                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;">Create
                                     beautifully breath-taking sliders with retina display using Brook's templates.
                                 </div>
                             </li>
@@ -1235,7 +1235,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":2870,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Poppins;text-transform:uppercase;">galaxy
+                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Encode Sans Expanded;text-transform:uppercase;">galaxy
                                 </div>
 
                                 <!-- LAYER NR. 9 -->
@@ -1246,7 +1246,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":3500,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power2.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">Enjoy
+                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;">Enjoy
                                     the view of our wonderful & mysterious galaxy as if we're all pro star-gazers.
                                 </div>
                             </li>
@@ -1285,7 +1285,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":2870,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Poppins;text-transform:uppercase;">bolide
+                                    style="z-index: 6; white-space: normal; font-size: 24px; line-height: 24px; font-weight: 600; color: #ffffff; letter-spacing: 2px;font-family:Encode Sans Expanded;text-transform:uppercase;">bolide
                                 </div>
 
                                 <!-- LAYER NR. 12 -->
@@ -1296,7 +1296,7 @@
                                     data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":3500,"speed":1500,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"auto:auto;","ease":"Power2.easeInOut"}]'
                                     data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                     data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">Excellent
+                                    style="z-index: 7; min-width: 390px; max-width: 390px; white-space: normal; font-size: 14px; line-height: 26px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;">Excellent
                                     light display with HD images combining enticing scrolling animations. </div>
                             </li>
                         </ul>
@@ -1312,7 +1312,7 @@
                                 data-startslide="0" data-endslide="3" data-frames='[{"delay":2170,"speed":400,"frame":"0","from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'
                                 data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                 data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                style="z-index: 17; white-space: nowrap; font-size: 18px; line-height: 18px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Poppins;cursor:pointer;">04
+                                style="z-index: 17; white-space: nowrap; font-size: 18px; line-height: 18px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;cursor:pointer;">04
                             </div>
 
                             <!-- LAYER NR. 14 -->
@@ -1337,7 +1337,7 @@
                                 data-startslide="0" data-endslide="3" data-frames='[{"delay":3060,"speed":400,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'
                                 data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]"
                                 data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                style="z-index: 19; white-space: nowrap; font-size: 18px; line-height: 18px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">01
+                                style="z-index: 19; white-space: nowrap; font-size: 18px; line-height: 18px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Encode Sans Expanded;">01
                             </div>
                         </div>
                         <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
