--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                         </div>
                         <div class="col-lg-6 col-sm-6 col-12">
                             <div class="call-btn text-center text-sm-right mt_mobile--20 wow move-up">
-                                <h5 class="text-white" style="font-weight: 500;">Ver más en</h5>  <strong><a href="https://www.laroche-posay.com.ar/" target="_blank" class="text-white"> LA ROCHE POSSAY</a></strong>
+                                <h5 class="text-white" style="font-weight: 500;">Ver más en</h5>  <strong><a href="https://www.laroche-posay.com.ar/" target="_blank" class="text-white"> LA ROCHE POSAY</a></strong>
                             </div>
                         </div>
                     </div>
