Agregado de Naranja

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <br><br><br>
 
             <!-- Start Call To Action -->
-            <div class="brook-call-to-action bg_color--24 ptb--60">
+            <div class="brook-call-to-action bg_color--24 ptb--60" style="background-color: #F08119;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-12 col-12">
@@ -269,7 +269,7 @@
                             <div class="row-column-content pt--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px;">Para evitar el cáncer de piel es clave prestar atención a los lunares. Su forma, tamaño y color pueden ser un llamado de atención. Maskin dice que lo óptimo es hacerse un chequeo una vez al año con un profesional. Destacó la importancia de fijarse en los detalles y  <span style="color: #249eda;">utilizar el método ABCDE</span> , que consiste en chequear posibles irregularidades. Las características de los lunares que pueden ser una señal de alarma son:</p>
+                                        <p class="bk_pra text-black" style="font-size: 20px;">Para evitar el cáncer de piel es clave prestar atención a los lunares. Su forma, tamaño y color pueden ser un llamado de atención. Maskin dice que lo óptimo es hacerse un chequeo una vez al año con un profesional. Destacó la importancia de fijarse en los detalles y  <span style="color:  #F08119;">utilizar el método ABCDE</span> , que consiste en chequear posibles irregularidades. Las características de los lunares que pueden ser una señal de alarma son:</p>
                                     </div>
                                 </div>
                             </div>
@@ -305,7 +305,7 @@
                             </div>
                             <div class="port-overlay-info">
                                 <div class="hover-action">
-                                    <h3 class="post-overlay-title"><a href="portfolio-details.html">Asimetría</a></h3>
+                                    <h3 class="post-overlay-title">Asimetría</h3>
                                 </div>
                             </div>
                         </div>
@@ -322,7 +322,7 @@
                             </div>
                             <div class="port-overlay-info">
                                 <div class="hover-action">
-                                    <h3 class="post-overlay-title"><a href="portfolio-details.html">Bordes irregulares o difusos</a></h3>
+                                    <h3 class="post-overlay-title">Bordes irregulares o difusos</h3>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                             </div>
                             <div class="port-overlay-info">
                                 <div class="hover-action">
-                                    <h3 class="post-overlay-title"><a href="portfolio-details.html">Color no homogéneo</a></h3>
+                                    <h3 class="post-overlay-title">Color no homogéneo</h3>
                                 </div>
                             </div>
                         </div>
@@ -354,7 +354,7 @@
                             </div>
                             <div class="port-overlay-info">
                                 <div class="hover-action">
-                                    <h3 class="post-overlay-title"><a href="portfolio-details.html">Diámetro mayor a 6 mm</a></h3>
+                                    <h3 class="post-overlay-title">Diámetro mayor a 6 mm</h3>
                                 </div>
                             </div>
                         </div>
@@ -369,8 +369,8 @@
                             </div>
                             <div class="port-overlay-info">
                                 <div class="hover-action">
-                                    <h3 class="post-overlay-title"><a href="portfolio-details.html">Evolución, presentación de anomalías como sangrado, inflamación, enrojecimiento, picazón o cualquier otra molestia.
-                                    </a></h3>
+                                    <h3 class="post-overlay-title">Evolución, presentación de anomalías como sangrado, inflamación, enrojecimiento, picazón o cualquier otra molestia.
+                                    </h3>
                                 </div>
                             </div>
                         </div>
@@ -393,7 +393,7 @@
                             <div class="row-column-content ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px;">El especialista también se refiere al método <span style="color: #249eda;">“Patito feo”</span> , que implica prestar atención a los lunares que son muy diferentes a los del resto del cuerpo.</p>
+                                        <p class="bk_pra text-black" style="font-size: 20px;">El especialista también se refiere al método <span style="color: #F08119;">“Patito feo”</span> , que implica prestar atención a los lunares que son muy diferentes a los del resto del cuerpo.</p>
                                     </div>
                                 </div>
                             </div>
