--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <br><br><br>
 
             <!-- Start Call To Action -->
-            <div class="brook-call-to-action bg_image--9 ptb--150" style="background-image: url(imagenes/KV.jpg);">
+            <div class="brook-call-to-action bg_image--9 ptb--100" style="background-image: url(imagenes/KV.jpg); border-radius: 5px;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-sm-6 col-12">
