--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         >
 
                     <!--Hero Item start-->
-                    <div class="hero-item bg-image" data-bg="imagenes/fotoprueba-1920x800.jpg">
+                    <div class="hero-item bg-image" data-bg="imagenes/Chica1.png">
                         <div class="container">
                             <div class="row">
                                 <div class="col-12">
