--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="row-column-content ptb--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano. Es importante prestar atención a los lunares y conocer los métodos de <span class="text-italic" style="color: #249eda;">autochequeo.</span> </p> <br><br>
+                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 30px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano. Es importante prestar atención a los lunares y conocer los métodos de <span class="text-italic" style="color: #249eda;">autochequeo.</span> </p> <br><br>
 
                                         <p class="bk_pra text-black" style="font-size: 20px;">
                                             El cáncer de piel es una enfermedad que se expande cada vez más, pero a la que se le puede poner freno si se tienen los cuidados necesarios. A nivel mundial, uno de cada tres cánceres es de piel. La buena noticia es que el 90% de los casos que son detectados a tiempo pueden ser tratados. Por eso, no solo es importante la <span class="text-italic" style="color: #249eda;">prevención</span>  sino también el <span class="text-italic" style="color: #249eda;">control</span> permanente de los cambios en el cuerpo, específicamente en los lunares.
@@ -269,7 +269,7 @@
                             <div class="row-column-content pt--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px;">Para evitar el cáncer de piel es clave prestar atención a los lunares. Su forma, tamaño y color pueden ser un llamado de atención. Maskin dice que lo óptimo es hacerse un chequeo una vez al año con un profesional. Destacó la importancia de fijarse en los detalles y  <span style="color:  #F08119;">utilizar el método ABCDE</span> , que consiste en chequear posibles irregularidades. Las características de los lunares que pueden ser una señal de alarma son:</p>
+                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 25px;">Para evitar el cáncer de piel es clave prestar atención a los lunares. Su forma, tamaño y color pueden ser un llamado de atención. Maskin dice que lo óptimo es hacerse un chequeo una vez al año con un profesional. Destacó la importancia de fijarse en los detalles y  <span style="color:  #F08119;">utilizar el método ABCDE</span> , que consiste en chequear posibles irregularidades. Las características de los lunares que pueden ser una señal de alarma son:</p>
                                     </div>
                                 </div>
                             </div>
