--- a/index.html
+++ b/index.html
@@ -171,11 +171,7 @@
             <br><br><br>
 
             <!-- Start Call To Action -->
-<<<<<<< HEAD
             <div class="brook-call-to-action bg_image--9 ptb--100" style="background-image: url(imagenes/foto1.jpg); border-radius: 5px;">
-=======
-            <div class="brook-call-to-action bg_image--9 ptb--100" style="background-image: url(imagenes/foto1.jpg); border-radius: 5px;">
->>>>>>> 699cd67def32463b0343876aeecaebf96864bfba
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-sm-6 col-12">
@@ -490,7 +486,7 @@
                             <div class="row-column-content pt--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <h3 class="heading heading-h3" style="color: white; background-color: #249eda; border-radius: 1px; padding: 5px;">El protector solar, imprescindible para el cuidado de la piel</h3>
+                                        <h3 class="heading heading-h3" style="color: white; background-color: #F08119; border-radius: 1px; padding: 5px;">El protector solar, imprescindible para el cuidado de la piel</h3>
                                         <br><br>
                                         <p class="bk_pra text-black" style="font-size: 20px;">A la hora de exponerse al sol, es fundamental usar protector solar. Pero es importante hacerlo de la manera correcta, para que tenga el efecto deseado. Maskin dio una serie de recomendaciones a tener en cuenta:
                                         </p>
