--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     <div class="row no-gutters left-bg-image" style="background-image: url(/imagenes/lunares2.png);">
                         <div class="col-lg-6">
                         </div>
-                        <div class="col-lg-6" >
+                        <div class="col-lg-6" style="padding-left: 50px;">
                             <div class="food-menu-wrap" style="background-color: #D7D7D7;">
                                 <div class="brook-section-title-restaurant text-center mb--50">
                                     <h5 class="" style="color: #249eda; font-size: 26px;">Una campaña que apunta a la autodetección</h5>
