--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <div class="col-lg-12">
                                         <p class="bk_pra text-black" style="font-size: 20px; padding: 30px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano. Es importante prestar atención a los lunares y conocer los métodos de <span class="text-italic" style="color: #249eda;">autochequeo.</span> </p> <br><br>
 
-                                        <p class="bk_pra text-black" style="font-size: 20px;">
+                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 30px;">
                                             El cáncer de piel es una enfermedad que se expande cada vez más, pero a la que se le puede poner freno si se tienen los cuidados necesarios. A nivel mundial, uno de cada tres cánceres es de piel. La buena noticia es que el 90% de los casos que son detectados a tiempo pueden ser tratados. Por eso, no solo es importante la <span class="text-italic" style="color: #249eda;">prevención</span>  sino también el <span class="text-italic" style="color: #249eda;">control</span> permanente de los cambios en el cuerpo, específicamente en los lunares.
                                         </p>
                                     </div>
@@ -452,7 +452,7 @@
                         <div class="col-lg-6" style="padding-left: 50px;">
                             <div class="food-menu-wrap" style="background-color: #D7D7D7;">
                                 <div class="brook-section-title-restaurant text-center mb--50">
-                                    <h5 class="" style="color: #249eda; font-size: 26px;">Una campaña que apunta a la autodetección</h5>
+                                    <h5 class="" style="color: #249eda; font-size: 21px;">Una campaña que apunta a la autodetección</h5>
                                 </div>
                                 <div class="menu-list-wrap">
                                     <ul class="menu-list">
