--- a/index.html
+++ b/index.html
@@ -132,6 +132,65 @@
             </div>
             <!-- End Call To Action --> 
 
+            <!-- Icon Box Area Start -->
+            <div class="brook-icon-boxes-area pt--100">
+                <div class="container">
+                    <div class="row">
+                        <!-- Single Icon Box Start -->
+                        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                            <div class="icon-box text-center no-border bg-transparant vibrate-style">
+                                <div class="inner">
+                                    <div class="icon">
+                                        <i class="fas fa-sun"></i>
+                                    </div>
+                                    <div class="content">
+                                        <h5 class="heading heading-h5" style="font-size: 17px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano
+
+                                        </h5>
+                                        <!-- <p>We create an exceptional experience delighting employee and customer</p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Single Icon Box End -->
+                        <!-- Single Icon Box Start -->
+                        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                            <div class="icon-box text-center no-border bg-transparant vibrate-style">
+                                <div class="inner">
+                                    <div class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </div>
+                                    <div class="content">
+                                        <h5 class="heading heading-h5" style="font-size: 17px;"> Es importante prestar atención a los lunares
+
+                                        </h5>
+                                        <!-- <p>We are sincere, reliable and trustworthy about our products</p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Single Icon Box End -->
+                        <!-- Single Icon Box Start -->
+                        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                            <div class="icon-box text-center no-border bg-transparant vibrate-style">
+                                <div class="inner">
+                                    <div class="icon">
+                                        <i class="fas fa-eye"></i>
+                                    </div>
+                                    <div class="content">
+                                        <h5 class="heading heading-h5" style="font-size: 17px;"> Es importante conocer los métodos de autochequeo</h5>
+                                        <!-- <p>We are creative and strive to connect new ideas with business realities</p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Single Icon Box End -->
+                        
+                    </div>
+                </div>
+            </div>
+            <!-- Icon Box Area End -->
+
             <!-- Start Row Columns Area -->
             <div class="brook-row-column-area bg_color--1 poss_relative">
                 <div class="container">
@@ -140,9 +199,9 @@
                             <div class="row-column-content ptb--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 30px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano. Es importante prestar atención a los lunares y conocer los métodos de <span class="text-italic" style="color: #249eda;">autochequeo.</span> </p> <br><br>
+                                        <p class="bk_pra text-black" style="font-size: 20px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano. Es importante prestar atención a los lunares y conocer los métodos de <span class="text-italic" style="color: #249eda;">autochequeo.</span> </p> <br><br>
 
-                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 30px;">
+                                        <p class="bk_pra text-black" style="font-size: 20px;">
                                             El cáncer de piel es una enfermedad que se expande cada vez más, pero a la que se le puede poner freno si se tienen los cuidados necesarios. A nivel mundial, uno de cada tres cánceres es de piel. La buena noticia es que el 90% de los casos que son detectados a tiempo pueden ser tratados. Por eso, no solo es importante la <span class="text-italic" style="color: #249eda;">prevención</span>  sino también el <span class="text-italic" style="color: #249eda;">control</span> permanente de los cambios en el cuerpo, específicamente en los lunares.
                                         </p>
                                     </div>
@@ -154,56 +213,27 @@
             </div>
             <!-- End Row Columns Area -->
 
-            <!-- Start Divider Area -->
-            <div class="brook-dividers-area bg_color--1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="dividers-inner">
-                                <div class="basic-thine-line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End Divider Area -->
-
-            <br><br><br>
-
-            <!-- Start Call To Action -->
-            <div class="brook-call-to-action bg_image--9 ptb--100" style="background-image: url(imagenes/foto1.jpg); border-radius: 5px;">
-                <div class="container">
+            <!-- About Coronavirus Area Start -->
+            <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/dalmata.png);">
+                <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" style="background-color: #249eda;">
                     <div class="row align-items-center">
-                        <div class="col-lg-6 col-sm-6 col-12">
-                            <div class="call-content text-center text-sm-left">
-                                <!-- <h3 class="heading heading-h3 text-white wow move-up">Horizontal solid #4</h3> -->
+                        <div class="col-xl-5 col-lg-6 wow move-up animate">
+                            <div class="about-coronavirus-content">
+                                <h2 class="text-black">Claves para prevenir el cáncer de piel</h2>
+                                <p class="sub-title text-black">La exposición al sol es un factor que incide directamente sobre la salud de la piel. El <span style="color: #249eda;">  Dr. Matías Maskin (MN 105069)</span>, Jefe de Dermatología de CEMIC, explica cuáles son los cuidados necesarios que deben tenerse a la hora de planear una salida al aire libre. <span style="font-weight: bold;"> “Las pautas de fotoprotección no tienen que ver solamente con aplicar una crema, sino también con usar sombrero, anteojos y ropa que cubra el cuerpo. La más importante es el horario”</span>, indica. El momento más riesgoso del día es entre las 11 de la mañana y las 3 de la tarde.</p>
+                                <p class="pragraph text-black">La radiación UV no es igual durante todo el año. En los meses de la primavera y el verano, ésta es mayor. Se mantiene igual entre octubre y febrero y tiene su pico en diciembre. Luego, en marzo, comienza a bajar.</p>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-sm-6 col-12">
-                            <div class="call-btn text-center text-sm-right mt_mobile--20 wow move-up">
-                                <!-- <a class="brook-btn bk-btn-theme btn-sd-size btn-rounded" href="#">Find out more</a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End Call To Action -->
-
-            <br><br><br>
-
-             <!-- Start Divider Area -->
-             <div class="brook-dividers-area bg_color--1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="dividers-inner">
-                                <div class="basic-thine-line"></div>
+                        <div class="col-xl-7 col-lg-6 wow move-up animate">
+                            <div class="about-image">
+                                <img src="imagenes/957 × 725 con typo.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- End Divider Area -->
+            <!-- About Coronavirus Area Start -->
+            
 
              <!-- Start Row Columns Area -->
              <div class="brook-row-column-area bg_color--1 poss_relative">
@@ -248,7 +278,7 @@
             <br><br><br>
 
             <!-- Start Call To Action -->
-            <div class="brook-call-to-action bg_color--24 ptb--60" style="background-color: #F08119;">
+            <div class="brook-call-to-action bg_color--24 ptb--60" style="background-color: #249eda;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-12 col-12">
@@ -269,7 +299,7 @@
                             <div class="row-column-content pt--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 25px;">Para evitar el cáncer de piel es clave prestar atención a los lunares. Su forma, tamaño y color pueden ser un llamado de atención. Maskin dice que lo óptimo es hacerse un chequeo una vez al año con un profesional. Destacó la importancia de fijarse en los detalles y  <span style="color:  #F08119;">utilizar el método ABCDE</span> , que consiste en chequear posibles irregularidades. Las características de los lunares que pueden ser una señal de alarma son:</p>
+                                        <p class="bk_pra text-black" style="font-size: 20px; padding: 25px;">Para evitar el cáncer de piel es clave prestar atención a los lunares. Su forma, tamaño y color pueden ser un llamado de atención. Maskin dice que lo óptimo es hacerse un chequeo una vez al año con un profesional. Destacó la importancia de fijarse en los detalles y  <span style="color:  #249eda;">utilizar el método ABCDE</span> , que consiste en chequear posibles irregularidades. Las características de los lunares que pueden ser una señal de alarma son:</p>
                                     </div>
                                 </div>
                             </div>
@@ -393,7 +423,7 @@
                             <div class="row-column-content ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px;">El especialista también se refiere al método <span style="color: #F08119;">“Patito feo”</span> , que implica prestar atención a los lunares que son muy diferentes a los del resto del cuerpo.</p>
+                                        <p class="bk_pra text-black" style="font-size: 20px;">El especialista también se refiere al método <span style="color: #249eda;">“Patito feo”</span> , que implica prestar atención a los lunares que son muy diferentes a los del resto del cuerpo.</p>
                                     </div>
                                 </div>
                             </div>
@@ -486,7 +516,7 @@
                             <div class="row-column-content pt--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <h3 class="heading heading-h3" style="color: white; background-color: #F08119; border-radius: 1px; padding: 5px;">El protector solar, imprescindible para el cuidado de la piel</h3>
+                                        <h3 class="heading heading-h3" style="color: white; background-color: #249eda; border-radius: 1px; padding: 5px;">El protector solar, imprescindible para el cuidado de la piel</h3>
                                         <br><br>
                                         <p class="bk_pra text-black" style="font-size: 20px;">A la hora de exponerse al sol, es fundamental usar protector solar. Pero es importante hacerlo de la manera correcta, para que tenga el efecto deseado. Maskin dio una serie de recomendaciones a tener en cuenta:
                                         </p>
