--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
 
             <!-- About Coronavirus Area Start -->
             <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/dalmata.png);">
-                <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" style="background-color: #249eda;">
+                <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" style="background-color: white;">
                     <div class="row align-items-center">
                         <div class="col-xl-5 col-lg-6 wow move-up animate">
                             <div class="about-coronavirus-content">
-                                <h2 class="text-white">Claves para prevenir el cáncer de piel</h2>
-                                <p class="pragraph text-white" style="font-size: 17px;">La exposición al sol es un factor que incide directamente sobre la salud de la piel. El <span class="text-italic">  Dr. Matías Maskin (MN 105069)</span>, Jefe de Dermatología de CEMIC, explica cuáles son los cuidados necesarios que deben tenerse a la hora de planear una salida al aire libre. <span style="font-weight: bold;"> “Las pautas de fotoprotección no tienen que ver solamente con aplicar una crema, sino también con usar sombrero, anteojos y ropa que cubra el cuerpo. La más importante es el horario”</span>, indica. El momento más riesgoso del día es entre las 11 de la mañana y las 3 de la tarde.</p>
-                                <p class="pragraph text-white" style="font-size: 17px;">La radiación UV no es igual durante todo el año. En los meses de la primavera y el verano, ésta es mayor. Se mantiene igual entre octubre y febrero y tiene su pico en diciembre. Luego, en marzo, comienza a bajar.</p>
+                                <h2 class="" style="color: #249eda;">Claves para prevenir el cáncer de piel</h2>
+                                <p class="pragraph text-black" style="font-size: 17px;">La exposición al sol es un factor que incide directamente sobre la salud de la piel. El <span class="text-italic">  Dr. Matías Maskin (MN 105069)</span>, Jefe de Dermatología de CEMIC, explica cuáles son los cuidados necesarios que deben tenerse a la hora de planear una salida al aire libre. <span style="font-weight: bold; color: #249eda;"> “Las pautas de fotoprotección no tienen que ver solamente con aplicar una crema, sino también con usar sombrero, anteojos y ropa que cubra el cuerpo. La más importante es el horario”</span>, indica. El momento más riesgoso del día es entre las 11 de la mañana y las 3 de la tarde.</p>
+                                <p class="pragraph text-black" style="font-size: 17px;">La radiación UV no es igual durante todo el año. En los meses de la primavera y el verano, ésta es mayor. Se mantiene igual entre octubre y febrero y tiene su pico en diciembre. Luego, en marzo, comienza a bajar.</p>
                             </div>
                         </div>
                         <div class="col-xl-7 col-lg-6 wow move-up animate">
