nuevo fondo dalmata

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <div class="row-column-content ptb--100 ptb-md--80 ptb-sm--60 wow move-up">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <p class="bk_pra text-black" style="font-size: 20px;">Cuidarse del sol es fundamental, especialmente en los meses de primavera y verano. Es importante prestar atención a los lunares y conocer los métodos de <span class="text-italic" style="color: #249eda;">autochequeo.</span> </p> <br><br>
+                                       
 
                                         <p class="bk_pra text-black" style="font-size: 20px;">
                                             El cáncer de piel es una enfermedad que se expande cada vez más, pero a la que se le puede poner freno si se tienen los cuidados necesarios. A nivel mundial, uno de cada tres cánceres es de piel. La buena noticia es que el 90% de los casos que son detectados a tiempo pueden ser tratados. Por eso, no solo es importante la <span class="text-italic" style="color: #249eda;">prevención</span>  sino también el <span class="text-italic" style="color: #249eda;">control</span> permanente de los cambios en el cuerpo, específicamente en los lunares.
@@ -214,8 +214,8 @@
             <!-- End Row Columns Area -->
 
             <!-- About Coronavirus Area Start -->
-            <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/dalmata.png);">
-                <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" style="background-color: white;">
+            <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/Fondo2-1920x925.jpg);">
+                <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" >
                     <div class="row align-items-center">
                         <div class="col-xl-5 col-lg-6 wow move-up animate">
                             <div class="about-coronavirus-content">
