--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-12 col-12">
                             <div class="call-content essential-cta-content text-center">
-                                <h3 class="text-white wow move-up" style="font-size: 35px;"><span style="font-weight: bold;">Cáncer de piel:</span>  cómo <span class="">prevenirlo</span>  y cómo <span class="">detectarlo</span> a tiempo</h3>
+                                <h3 class="text-white wow move-up" style="font-size: 35px;"><span style="font-weight: bold;">CÁNCER DE PIEL:</span>  CÓMO <span class="">PREVENIRLO</span>  Y CÓMO <span class="">DETECTARLO</span> A TIEMPO</h3>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
             <!-- End Row Columns Area -->
 
             <!-- About Coronavirus Area Start -->
-            <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/Fondo2-1920x925.jpg);">
+            <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/Fondo2-1920x925\ -COMPRIMIDO.jpg);">
                 <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" >
                     <div class="row align-items-center">
                         <div class="col-xl-5 col-lg-6 wow move-up animate">
@@ -440,7 +440,7 @@
             <!-- Start Food Menu Area -->
             <div class="food-menu-area">
                 <div class="container">
-                    <div class="row no-gutters left-bg-image" style="background-image: url(/imagenes/lunares2.png);">
+                    <div class="row no-gutters left-bg-image" style="background-image: url(/imagenes/767x523:01.jpg);">
                         <div class="col-lg-6">
                         </div>
                         <div class="col-lg-6" style="padding-left: 50px;">
