--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!-- End Call To Action --> 
 
             <!-- Icon Box Area Start -->
-            <div class="brook-icon-boxes-area pt--100">
+            <div class="brook-icon-boxes-area pt--100" >
                 <div class="container">
                     <div class="row">
                         <!-- Single Icon Box Start -->
@@ -192,7 +192,7 @@
             <!-- Icon Box Area End -->
 
             <!-- Start Row Columns Area -->
-            <div class="brook-row-column-area bg_color--1 poss_relative">
+            <div class="brook-row-column-area bg_color--1 poss_relative" >
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -214,7 +214,7 @@
             <!-- End Row Columns Area -->
 
             <!-- About Coronavirus Area Start -->
-            <div class="about-coronvirus-area bg_image--137 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" style="background-image: url(/imagenes/Fondo2-1920x925\ -COMPRIMIDO.jpg);">
+            <div class="about-coronvirus-area bg_color--1 pt--90 pt_md--70 pt_sm--60 pb--80 pb_md--40 pb_sm--50" >
                 <div class="container-fluid plr--220 plr_lp--15 plr_lg--15 plr_md--15 plr_sm--15" >
                     <div class="row align-items-center">
                         <div class="col-xl-5 col-lg-6 wow move-up animate">
@@ -473,7 +473,7 @@
 
 
             <!-- Start Row Columns Area -->
-            <div class="brook-row-column-area bg_color--1 poss_relative">
+            <div class="brook-row-column-area bg_color--1 poss_relative" >
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -494,7 +494,7 @@
             <!-- End Row Columns Area -->
             
             <!-- Start List Wrapper -->
-            <div class="brook-list-wrapper ptb-md--80 ptb-sm--60  bg_color--1">
+            <div class="brook-list-wrapper ptb-md--80 ptb-sm--60  bg_color--1" >
                 <div class="container">
                     <div class="row">
                        
